--- a/styles/index.css
+++ b/styles/index.css
@@ -1,8 +1,16 @@
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
+
 html,
 body {
   padding: 0;
   margin: 0;
-  background-color: #f9f9f9;
+  background-color: #F8FAFC;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
