--- a/styles/index.css
+++ b/styles/index.css
@@ -1,9 +1,9 @@
-@import "tailwindcss/base";
+/* @import "tailwindcss/base";
 @import "tailwindcss/components";
-@import "tailwindcss/utilities";
-/* @tailwind base;
+@import "tailwindcss/utilities"; */
+@tailwind base;
 @tailwind components;
-@tailwind utilities; */
+@tailwind utilities;
 
 
 html,
