--- a/styles/index.css
+++ b/styles/index.css
@@ -10,7 +10,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  background-color: #F8FAFC;
+  background-color:;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
