--- a/styles/index.css
+++ b/styles/index.css
@@ -10,7 +10,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  background-color:;
+  background-color: lightGray;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -22,4 +22,9 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.selected {
+  background-color:#B3DDD1;
+  color: black;
 }
