--- a/styles/index.css
+++ b/styles/index.css
@@ -6,7 +6,7 @@
 @tailwind utilities;
 
 
-html,
+/* html,
 body {
   padding: 0;
   margin: 0;
@@ -27,4 +27,4 @@ a {
 .selected {
   background-color:#B3DDD1;
   color: black;
-}
+} */
