--- a/styles/index.css
+++ b/styles/index.css
@@ -8,6 +8,14 @@
 .kep-login-facebook{
   width: 100%;
 }
+
+.hide-scroll-bar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.hide-scroll-bar::-webkit-scrollbar {
+  display: none;
+}
 /* html,
 body {
   padding: 0;
